--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                 <h2>Contact</h2>
             </div>
         </header>
-        <img src="/img/img_main_pumpkin.png" alt="pumkin" class="mainImg">
+        <img src="img/img_main_pumpkin.png" alt="pumkin" class="mainImg">
         <div class="flexRow context">
             <div class="flexColumn vegetables">
                 <h3 class="titleSection">Vegetables</h3>
                 <div class="flexRow vegetImgs">
-                    <img src="/img/img_vegetables_pepper.png" alt="pepper">
-                    <img src="/img/img_vegetables_carrot.png" alt="carrot">
-                    <img src="/img/img_vegetables_corn.png" alt="corn">
+                    <img src="img/img_vegetables_pepper.png" alt="pepper">
+                    <img src="img/img_vegetables_carrot.png" alt="carrot">
+                    <img src="img/img_vegetables_corn.png" alt="corn">
                 </div>
             </div>
             <div class="flexColumn contact">
